MISC #71692 - RSpec works: menu_spec.rb

--- a/app/views/_menu.html.haml
+++ b/app/views/_menu.html.haml
@@ -1,7 +1,9 @@
+:ruby
+  menu = controller&.menu || menu
 #navigation
   #menu{style: "top: 10px"}
     %ul
-      - controller.menu.each do |menu_entry|
+      - menu.each do |menu_entry|
         - if menu_entry.submenu?
           %li.submenu
             %a{href: "#"}
