--- a/app/assets/stylesheets/grid.header.scss
+++ b/app/assets/stylesheets/grid.header.scss
@@ -32,6 +32,7 @@
       padding-left: 5px;
       padding-right: 5px;
       border-radius: 2px;
+      color: $grid-header-selection-info-color;
       &:hover {
         background: rgba(158, 158, 158, 0.2);
       }
