--- a/app/assets/stylesheets/editor.scss
+++ b/app/assets/stylesheets/editor.scss
@@ -43,6 +43,7 @@
       margin-bottom: 8px;
     }
     .chzn-drop {
+      width: 102% !important;
       margin-right: 4px;
       margin-left: -2px;
     }
