FEATURE - Adjust layout for panel

--- a/app/assets/stylesheets/grid.header.scss
+++ b/app/assets/stylesheets/grid.header.scss
@@ -102,6 +102,7 @@
             padding: 4px 10px 0px 10px;
             span {
               float: right;
+              padding-top: 1px;
               padding-left: 5px;
               font-weight: bold;
               text-transform: uppercase;
