REFACTOR - Move width setting to form/editor stylesheet for chosen container

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -39,6 +39,7 @@ form {
       margin-bottom: 5px;
     }
     .chzn-container {
+      width: 100% !important;
       .chzn-choices {
         .search-choice {
           margin-top: 7px;
