FEATURE - Adjust Form layout (field-error)

--- a/app/assets/stylesheets/overrides/materialize.overrides.scss
+++ b/app/assets/stylesheets/overrides/materialize.overrides.scss
@@ -87,9 +87,10 @@ nav {
     }
   }
   .modal-content {
-    padding: 0 24px;
+    // padding: 0 24px;
     h5 {
-      margin-bottom: 48px;
+      margin-top: 5px;
+      margin-bottom: 24px;
     }
     p {
       font-size: $font-size-middle;
