BUG #19 - Fix the chosen introduced by upgrade

--- a/app/assets/stylesheets/overrides/chosen.overrides.scss
+++ b/app/assets/stylesheets/overrides/chosen.overrides.scss
@@ -1,6 +1,6 @@
 @import 'base';
 
-select.chosen, select.chzn-select {
+select.chosen, select.chzn-select, select.chosen-select {
   display: block;
 }
 
