--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -24,94 +24,100 @@
           _klass = model_name.classify
           field = column.options[:through] || column.name
           source = column.editor_source || column.source
-        .field{:name => column_name}
-          - unless column.sql_type.to_s.downcase == 'boolean'
-            %label{:for => "#{model_name}_#{column_name}"}= label
-          - if (column.sql_type.to_s == 'belongs_to' || column.sql_type.to_s == 'enum')
-            = form.select column_name,                                      |
-              select_options(column),                                       |
-              { include_blank: !column.presence_required? },                |
-              :class             => 'chzn-select',                          |
-              :disabled          => column.options[:auto_fill],             |
-              "data-required"    => column.presence_required?,              |
-              "data-source"      => source,                                 |
-              "data-target"      => "#{column_name}_target_flag",           |
-              "data-field"       => field                                   |
+        .field-line
+          .switch.target_flag_container
+            %label
+              %input.target_flag{type: 'checkbox', "data-target" => "#{column_name}_target_flag"}
+              %span.lever
+          .field{:name => column_name}
+            - unless column.sql_type.to_s.downcase == 'boolean'
+              %label{:for => "#{model_name}_#{column_name}"}= label
+            - if (column.sql_type.to_s == 'belongs_to' || column.sql_type.to_s == 'enum')
+              = form.select column_name,                                      |
+                select_options(column),                                       |
+                { include_blank: !column.presence_required? },                |
+                :class             => 'chzn-select',                          |
+                :disabled          => column.options[:auto_fill],             |
+                "data-required"    => column.presence_required?,              |
+                "data-source"      => source,                                 |
+                "data-target"      => "#{column_name}_target_flag",           |
+                "data-field"       => field                                   |
 
-          - elsif (column.sql_type.to_s == 'has_and_belongs_to_many' or column.sql_type.to_s == 'has_many')
-            = form.select column.reflection.name.to_s,                       |
-              select_options(column),                                        |
-              { include_blank: !column.presence_required? },                 |
-              :multiple          => true,                                    |
-              :class             => 'chzn-select',                           |
-              "data-required"    => column.presence_required?,               |
-              "data-source"      => source,                                  |
-              "data-target"      => "#{column_name}_target_flag",            |
-              "data-field"       => field,                                   |
-              :disabled          => column.options[:auto_fill]               |
+            - elsif (column.sql_type.to_s == 'has_and_belongs_to_many' or column.sql_type.to_s == 'has_many')
+              = form.select column.reflection.name.to_s,                       |
+                select_options(column),                                        |
+                { include_blank: !column.presence_required? },                 |
+                :multiple          => true,                                    |
+                :class             => 'chzn-select',                           |
+                "data-required"    => column.presence_required?,               |
+                "data-source"      => source,                                  |
+                "data-target"      => "#{column_name}_target_flag",            |
+                "data-field"       => field,                                   |
+                :disabled          => column.options[:auto_fill]               |
 
-          - elsif (select_tag_field?(column) || column.sql_type.to_s == 'has_one')
-            = select_tag "#{model_name}[#{column_name}]",                   |
-              select_tag_options(column),                                   |
-              :class             => 'chzn-select',                          |
-              :disabled          => column.options[:auto_fill],             |
-              :include_blank     => !column.presence_required?,             |
-              "data-required"    => column.presence_required?,              |
-              "data-target"      => "#{column_name}_target_flag",           |
-              "data-source"      => source,                                 |
-              "data-field"       => field                                   |
-            - if (column.options[:depend_column].present?)
-              :javascript
-                $(function(){
-                  var depend_select_id = "#{model_name}_#{column.options[:depend_column]}";
-                  var depend_select = $("select#" + depend_select_id);
+            - elsif (select_tag_field?(column) || column.sql_type.to_s == 'has_one')
+              = select_tag "#{model_name}[#{column_name}]",                   |
+                select_tag_options(column),                                   |
+                :class             => 'chzn-select',                          |
+                :disabled          => column.options[:auto_fill],             |
+                :include_blank     => !column.presence_required?,             |
+                "data-required"    => column.presence_required?,              |
+                "data-target"      => "#{column_name}_target_flag",           |
+                "data-source"      => source,                                 |
+                "data-field"       => field                                   |
+              - if (column.options[:depend_column].present?)
+                :javascript
+                  $(function(){
+                    var depend_select_id = "#{model_name}_#{column.options[:depend_column]}";
+                    var depend_select = $("select#" + depend_select_id);
 
-                  depend_select.on('change', function(){
-                    var current_select_id = "#{model_name}_#{column_name}";
-                    var current_select = $("select#" + current_select_id);
-                    var key = $(this).val();
-                    current_select.find("option").hide().trigger("chosen:updated");
-                    current_select.val("").trigger("chosen:updated");
-                    current_select.find("option[data-key='" + key + "']").show().css("display", "").trigger("chosen:updated");
+                    depend_select.on('change', function(){
+                      var current_select_id = "#{model_name}_#{column_name}";
+                      var current_select = $("select#" + current_select_id);
+                      var key = $(this).val();
+                      current_select.find("option").hide().trigger("chosen:updated");
+                      current_select.val("").trigger("chosen:updated");
+                      current_select.find("option[data-key='" + key + "']").show().css("display", "").trigger("chosen:updated");
+                    });
                   });
-                });
 
-          - elsif column.options[:file]
-            = form.file_field column_name, "data-target" => "#{column_name}_target_flag", "data-field" => field, :style => 'width: 250px'
-          - elsif column.options[:password]
-            = form.password_field column_name, "data-target" => "#{column_name}_target_flag", "data-field" => field, :style => 'width: 250px'
-          - elsif (column.sql_type.to_s == 'string')
-            = form.text_field column_name, :class => "auto-complete-text-field-#{column_name}", :value => column.value(object), "data-target" => "#{column_name}_target_flag", "data-field" => field
+            - elsif column.options[:file]
+              = form.file_field column_name, "data-target" => "#{column_name}_target_flag", "data-field" => field, :style => 'width: 250px'
+            - elsif column.options[:password]
+              = form.password_field column_name, "data-target" => "#{column_name}_target_flag", "data-field" => field, :style => 'width: 250px'
+            - elsif (column.sql_type.to_s == 'string')
+              = form.text_field column_name, :class => "auto-complete-text-field-#{column_name}", :value => column.value(object), "data-target" => "#{column_name}_target_flag", "data-field" => field
 
-            :javascript
-              var choices = "/wulin_master/fetch_distinct_options?"
-                                   + "column=#{column_name}"
-                                   + "&grid=#{grid.class}"
-                                   + "&klass=#{grid.model.name}"
-                                   + "&screen=#{screen.class}"
-                                   + "&source=#{column_name}";
-              var container = $(".auto-complete-text-field-#{column_name}");
-              var column = {
-                auto_complete: true,
-                width: container.width(),
-                choices: choices
-              };
-              var args = {
-                column: column,
-                container: container
-              };
-              carbonCopyNewEditor = TextEditorForForm.bind({})
-              carbonCopyNewEditor(args);
+              :javascript
+                var choices = "/wulin_master/fetch_distinct_options?"
+                                     + "column=#{column_name}"
+                                     + "&grid=#{grid.class}"
+                                     + "&klass=#{grid.model.name}"
+                                     + "&screen=#{screen.class}"
+                                     + "&source=#{column_name}";
+                var container = $(".auto-complete-text-field-#{column_name}");
+                var column = {
+                  auto_complete: true,
+                  width: container.width(),
+                  choices: choices
+                };
+                var args = {
+                  column: column,
+                  container: container
+                };
+                carbonCopyNewEditor = TextEditorForForm.bind({})
+                carbonCopyNewEditor(args);
 
-          - else
-            - if column.sql_type.to_s.downcase == 'boolean'
-              = form.check_box column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-field" => field, class: 'filled-in'
-              = form.label column_name
-            - elsif column.sql_type.to_s.downcase == 'text'
-              = form.text_area column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-field" => field, class: "materialize-textarea"
             - else
-              = form.text_field column_name, :style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column), 'data-time' => time_column?(column), "data-field" => field
-          .field_error
+              - if column.sql_type.to_s.downcase == 'boolean'
+                = form.check_box column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-field" => field, class: 'filled-in'
+                = form.label column_name
+              - elsif column.sql_type.to_s.downcase == 'text'
+                = form.text_area column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-field" => field, class: "materialize-textarea"
+              - else
+                = form.text_field column_name, :style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column), 'data-time' => time_column?(column), "data-field" => field
+
+            .field_error
     .submit
       .btn-flat.modal-close CANCEL
       - if is_new
@@ -123,6 +129,10 @@
 :javascript
   $('##{grid.name}_form select[data-required="true"]').chosen();
   $('##{grid.name}_form select[data-required="false"]').chosen({allow_single_deselect: true});
+  $('##{grid.name}_form select').off('change').on('change', function(){
+    var flag = $('##{grid.name}_form input.target_flag:checkbox[data-target="' + $(this).attr('data-target') + '"]');
+    if (flag.size() > 0) flag.prop('checked', true);
+  });
 
   $('##{grid.name}_form input[type=text]').parent().addClass('input-field');
 
