--- a/app/assets/stylesheets/grid.header.scss
+++ b/app/assets/stylesheets/grid.header.scss
@@ -84,6 +84,10 @@
   .toolbar-wrapper {
     padding: 15px 20px 0 20px;
     overflow: hidden;
+    .toolbar_icon_disabled {
+      @include opacity(0.4);
+      cursor: default !important;
+    }
     .toolbar-global {
       position: relative;
       top: 4px;
