FEATURE - Restore confirm message when confirm modal close

--- a/app/views/_content.html.haml
+++ b/app/views/_content.html.haml
@@ -26,4 +26,10 @@
         modal.css('z-index', '9999');
       }
     });
+
+    $('#confirm-modal').modal({
+      complete: function(modal, trigger) {
+        $('#confirm-content').text('Are you sure to do this ?');
+      }
+    });
   });
