FEATURE - Add general load modal

--- a/app/views/_content.html.haml
+++ b/app/views/_content.html.haml
@@ -19,6 +19,10 @@
   .modal-footer
     .modal-close.btn.right OK
 
+#load-modal.info-modal.modal{style: "width: 150px"}
+  .modal-content
+    .modal-message Loading...
+
 :javascript
   $(function(){
     $('.info-modal').modal({
