--- a/app/assets/stylesheets/toolbar.scss
+++ b/app/assets/stylesheets/toolbar.scss
@@ -96,6 +96,10 @@ $toolbar_button_height: 50px;
   background: image-url("ui/batch_update.png") no-repeat top center;
 }
 
+.toolbar_icon_import {
+  background: image-url("ui/import_icon.png") no-repeat top center;
+}
+
 .toolbar_icon_batch_edit {
   background: image-url("ui/form_edit_icon.png") no-repeat top center;
 }
