--- a/app/assets/stylesheets/lib/SlickGrid/slick.rowdetailview.scss
+++ b/app/assets/stylesheets/lib/SlickGrid/slick.rowdetailview.scss
@@ -6,7 +6,7 @@
   padding-top: 2px;
   i.material-icons {
     font-size: $font-size-small;
-    color: $main-color;
+    color: $label-color;
   }
 }
 
