#115 Make titles more readable for my old eyes

--- a/app/assets/stylesheets/grid.table.header.scss
+++ b/app/assets/stylesheets/grid.table.header.scss
@@ -16,7 +16,8 @@
     }
     label {
       top: 15px;
-      font-size: $font-size-small;
+      font-size: $font-size-middle;
+      font-weight: bolder;
     }
     input[type=text] {
       margin-bottom: none;
