FEATURE #125 - Support rails 6

--- a/app/assets/stylesheets/master.sass.erb
+++ b/app/assets/stylesheets/master.sass.erb
@@ -3,11 +3,38 @@ $color-theme: <%= WulinMaster.config.color_theme %>
 $primary-color: color(#{$color-theme}, 'lighten-2') !default
 $secondary-color: color(#{$color-theme}, 'base') !default
 @import 'materialize'
-@import 'material_icons'
+@import 'material_icons.css'
 
 $color-theme: <%= WulinMaster.config.color_theme %>
 
-@import 'lib/*'
-@import 'lib/SlickGrid/*'
-@import 'overrides/*'
-@import '/*'
+@import 'lib/chosen.scss'
+@import 'lib/flatpickr_material_blue.scss'
+@import 'lib/jquery-ui-1.8.5.custom.scss'
+@import 'lib/lazyjsonviewer.scss'
+@import 'lib/chosen.scss'
+@import 'lib/flatpickr_material_blue.scss'
+@import 'lib/jquery-ui-1.8.5.custom.scss'
+@import 'lib/lazyjsonviewer.scss'
+@import 'lib/SlickGrid/slick.columnpicker.scss'
+@import 'lib/SlickGrid/slick.grid.scss'
+@import 'lib/SlickGrid/slick.headerbuttons.scss'
+@import 'lib/SlickGrid/slick.headermenu.scss'
+@import 'lib/SlickGrid/slick.pager.scss'
+@import 'lib/SlickGrid/slick.rowdetailview.scss'
+@import 'overrides/chosen.overrides.scss'
+@import 'overrides/flatpickr.override.scss'
+@import 'overrides/jquery.ui.overrides.scss'
+@import 'overrides/materialize.overrides.scss'
+@import 'body.scss'
+@import 'editor.scss'
+@import 'form.scss'
+@import 'grid.cell.scss'
+@import 'grid.color.scss'
+@import 'grid.columnpicker.scss'
+@import 'grid.container.scss'
+@import 'grid.header.scss'
+@import 'grid.table.header.scss'
+@import 'menu.scss'
+@import 'mixins.scss'
+@import 'nav.scss'
+@import 'panel.scss'
