--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -44,16 +44,32 @@
                 "data-field"       => field                                   |
 
             - elsif (column.sql_type.to_s == 'has_and_belongs_to_many' or column.sql_type.to_s == 'has_many')
-              = form.select column.reflection.name.to_s,                       |
-                select_options(column),                                        |
-                { include_blank: !column.presence_required? },                 |
-                :multiple          => true,                                    |
-                :class             => 'chzn-select',                           |
-                "data-required"    => column.presence_required?,               |
-                "data-source"      => source,                                  |
-                "data-target"      => "#{column_name}_target_flag",            |
-                "data-field"       => field,                                   |
-                :disabled          => column.options[:auto_fill]               |
+              - if column.options['checkbox'] == true
+                .flex-fields{style: 'display: flex;flex-wrap: wrap;'}
+                  - column.options['choices'].each do |arr|
+                    - field_name = arr[0].gsub(' ', '_').downcase
+                    .field{style: 'flex: 0 0 180px;height:80px;'}
+                      = form.check_box column_name,                                  |
+                        name: "room[interiors_attributes][][checked]", |
+                        id: "room_interiors_#{field_name}",                          |
+                        "data-target" => "#{field_name}_target_flag",                |
+                        "data-field" => field_name,                                  |
+                        class: 'filled-in'
+                      = form.label "interiors_#{field_name}", arr[0]
+                      %span
+                        %input{ type: 'hidden', name: "room[interiors_attributes][][id]", value: arr[1] }
+                        %input{ type: 'text', name: "room[interiors_attributes][][capacity]", style: 'width: 80px; min-height: 20px'}
+              - else
+                = form.select column.reflection.name.to_s,                       |
+                  select_options(column),                                        |
+                  { include_blank: !column.presence_required? },                 |
+                  :multiple          => true,                                    |
+                  :class             => 'chzn-select',                           |
+                  "data-required"    => column.presence_required?,               |
+                  "data-source"      => source,                                  |
+                  "data-target"      => "#{column_name}_target_flag",            |
+                  "data-field"       => field,                                   |
+                  :disabled          => column.options[:auto_fill]               |
 
             - elsif (select_tag_field?(column) || column.sql_type.to_s == 'has_one')
               = select_tag "#{model_name}[#{column_name}]",                   |
