--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,7 @@
       window._always_reset_form = #{WulinMaster.config.always_reset_form};
 
     = javascript_include_tag *WulinMaster.javascripts
+    = javascript_pack_tag 'application'
     = yield :header_tags
     :javascript
       $(function(){
