--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -187,9 +187,9 @@
 
             .field_error
     .submit
-      .btn-flat.modal-close CANCEL
+      .btn-flat.modal-close 取消
       - if is_new
-        %input.btn{:id => "#{grid.name}_submit", :name => "commit", :type => "submit", :value => " Create "}/
-        %input.btn{:id => "#{grid.name}_submit_continue", :name => "commit", :type => "submit", :value => " Create and Continue "}/
+        %input.btn{:id => "#{grid.name}_submit", :name => "commit", :type => "submit", :value => " 创建 "}/
+        %input.btn{:id => "#{grid.name}_submit_continue", :name => "commit", :type => "submit", :value => " 创建并继续 "}/
       - else
-        %input.btn.update_btn{:id => "#{grid.name}_batch_update", :name => "commit", :type => "submit", :value => "  Update  "}/
+        %input.btn.update_btn{:id => "#{grid.name}_batch_update", :name => "commit", :type => "submit", :value => "  更新  "}/
