--- a/app/views/_grid.html.haml
+++ b/app/views/_grid.html.haml
@@ -34,6 +34,7 @@
 :javascript
   // create grid
   gridManager.createNewGrid('#{grid.name.to_s.html_safe}',
+                            '#{grid.title.to_s.html_safe}',
                             '#{grid.model.to_s.html_safe}',
                             '#{grid.params["screen"].to_s.html_safe}',
                             '#{grid.path_for_json.to_s.html_safe}',
