Set whitespace theme color as teal

--- a/app/assets/stylesheets/master.sass.erb
+++ b/app/assets/stylesheets/master.sass.erb
@@ -1,11 +1,9 @@
 @import 'materialize/components/color'
-$color-theme: <%= WulinMaster.config.color_theme %>
+$color-theme: 'teal'
 $primary-color: color(#{$color-theme}, 'lighten-2') !default
 $secondary-color: color(#{$color-theme}, 'base') !default
 @import 'materialize'
 @import 'material_icons.css'
-
-$color-theme: <%= WulinMaster.config.color_theme %>
 
 @import 'lib/chosen.scss'
 @import 'lib/flatpickr_material_blue.scss'
