--- a/app/views/_menu.html.haml
+++ b/app/views/_menu.html.haml
@@ -10,8 +10,8 @@
               = menu_entry.title
             %ul
               - menu_entry.each do |submenu_entry|
-                %li.item{:style => submenu_entry.hidden? ? "display:none" : ""}
-                  = link_to submenu_entry.path, class: 'waves-effect' do
+                %li.item{ style: submenu_entry.hidden? ? "display:none" : "" }
+                  = link_to submenu_entry.path, class: 'waves-effect', onclick: "#{submenu_entry.target_blank? ? "window.open(this.href,'_blank');return false;" : ""}" do
                     %i.material-icons= submenu_entry.options[:icon] || 'crop_16_9'
                     %span= submenu_entry.title
         - else
