BUG #128 - Fix material_icons not found

--- a/app/assets/stylesheets/master.sass
+++ b/app/assets/stylesheets/master.sass
@@ -1,11 +1,9 @@
+@import 'setting'
 @import 'materialize/components/color'
-$color-theme: <%= WulinMaster.config.color_theme %>
 $primary-color: color(#{$color-theme}, 'lighten-2') !default
 $secondary-color: color(#{$color-theme}, 'base') !default
 @import 'materialize'
 @import 'material_icons'
-
-$color-theme: <%= WulinMaster.config.color_theme %>
 
 @import 'lib/*'
 @import 'lib/SlickGrid/*'
